--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "moment-timezone": "^0.5.10",
     "node-fetch": "^1.6.3",
-    "redis": "^2.6.3"
+    "redis": "^2.6.3",
+    "restify": "^4.3.0"
   }
 }
